--- a/media/styles.css
+++ b/media/styles.css
@@ -12,6 +12,7 @@
     box-shadow: 2px 2px 10px 1px rgba(0, 0, 0, 1);
     border-top-left-radius: 5px;
     border-top-right-radius: 5px;
+    z-index: 100;
     
     font-family: arial, helvetica, sans-serif;
     font-size: 9pt; line-height: normal;
