--- a/media/styles.css
+++ b/media/styles.css
@@ -95,3 +95,7 @@ body[data-is-known-user="true"] .news_miniwall_widget_item.read { display: none;
 }
 
 #news_miniwall_widget_container.collapsed .footing { display: none; }
+
+body.popup.with_nmw_widget   ,
+body.admin.with_nmw_widget   ,
+body.with_nmw_widget #footer { padding-bottom: 35px; }
